# m00d

./: .gitignore  README.md  TODO.md  build.sh  compose.yaml  packages.sh
.gitea/workflows/: build.yaml
backend/: .dockerignore  .env  .pre-commit-config.yaml  Dockerfile  README.md  api.py  api.rest  build.sh  docker.sh  lint.sh  pyproject.toml  test.sh
backend/features/: crud.feature  environment.py  version.feature
backend/features/steps/: crud.py  version.py
frontend/: .dockerignore  .env.development  Dockerfile  README.md  biome.json  build.sh  docker.sh  index.css  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/.husky/: post-commit  pre-commit
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/components/display/: index.test.tsx  index.tsx
frontend/src/components/shared/: index.ts
