[build-system]
requires = ["uv_build>=0.11.0,<0.12"]
build-backend = "uv_build"

[project]
name = "m00d-backend"
version = "1.0.1"
description = "Mood tracker (Backend)"
license = "GPL-3.0-only"
authors = [
    {name = "Chris Post", email = "admin@postfmly.com"}
]
keywords = ["mood", "tracker"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment :: Mozilla",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Typing :: Typed"
]
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.1",
    "peewee>=4.0.2",
    "pydantic>=2.12.5",
    "python-box>=7.4.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3"
]
requires-python = ">=3.14"

[project.urls]
GitHub = "https://github.com/chump29/m00d"

[project.optional-dependencies]
dev = [
    "behave>=1.3.3",
    "coverage>=7.13.5",
    "pip-review>=1.3.0",
    "pre-commit>=4.5.1",
    "pylint>=4.0.5",
    "types-peewee>=4.0.0.20260223"
]

[tool.pylint.master]
ignore-paths = [
    ".venv"
]

[tool.pylint."messages control"]
disable = ["C0411"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
ignore = [
    "D203",
    "D212",
    "D400",
    "D415",
    "S101"
]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FAST",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W"
]

[tool.uv]
python-downloads = "manual"

[tool.uv.build-backend]
namespace = true
source-exclude = [
    ".coverage",
    ".dockerignore",
    ".pre-commit-config.yaml",
    ".python-version",
    ".ruff_cache/**/*",
    ".venv/**/*",
    "*.sh",
    "api.rest",
    "db/*",
    "Dockerfile",
    "features/**/*",
    "README.md",
    "uv.lock"
]
